--- a/cafe-with-a-vue/index.html
+++ b/cafe-with-a-vue/index.html
@@ -6,10 +6,11 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<link rel="stylesheet" href="./styles.css" />
 		<title>Cafe with a Vue</title>
+		<script src="https://cdn.jsdelivr.net/npm/vue"></script>
 	</head>
 	<body>
 		<div class="app">
-			<h1>La belle vue</h1>
+			<h1>{{ restaurantName }}</h1>
 			<p class="description">
 				Bienvenue dans notre café la belle vue ! Nous sommes réputés pour notre
 				pain et nos merveilleuses pâtisseries. Faites vous plaisir dès le matin
@@ -21,4 +22,12 @@
 			</footer>
 		</div>
 	</body>
+	<script>
+		const app = new Vue({
+			el: '.app',
+			data: {
+				restaurantName: 'La belle vue'
+			}
+		})
+	</script>
 </html>
